--- a/project_ambw/pubspec.yaml
+++ b/project_ambw/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   intl: ^0.17.0
+  loading_animation_widget: ^1.2.0+1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
