--- a/project_ambw/android/app/src/main/AndroidManifest.xml
+++ b/project_ambw/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.project_ambw">
+    <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY"/>
    <application
         android:label="project_ambw"
         android:name="${applicationName}"
