--- a/project_ambw/pubspec.yaml
+++ b/project_ambw/pubspec.yaml
@@ -33,8 +33,10 @@ dependencies:
   firebase_core: ^1.17.1
   flutter:
     sdk: flutter
+  flutter_dnd: ^0.1.4+1
   intl: ^0.17.0
   loading_animation_widget: ^1.2.0+1
+  sound_mode: ^2.0.2
 
 dev_dependencies:
   flutter_lints: ^1.0.0
