--- a/project_ambw/pubspec.yaml
+++ b/project_ambw/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   cloud_firestore_web: ^2.6.16
   cupertino_icons: ^1.0.2
   firebase_core: ^1.17.1
+  firebase_storage: ^10.2.17
+  firebase_storage_web: ^3.2.16
   flutter:
     sdk: flutter
   flutter_dnd: ^0.1.4+1
