--- a/project_ambw/pubspec.yaml
+++ b/project_ambw/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   intl: ^0.17.0
   loading_animation_widget: ^1.2.0+1
   sound_mode: ^2.0.2
+  audioplayers: ^0.20.1
+  # audioplayer: 0.8.1
+  # audioplayer_web: 0.7.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
