--- a/project_ambw/pubspec.yaml
+++ b/project_ambw/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   assets:
     - assets/home_banner_art.png
     - assets/home_banner.png
+    - assets/img/
     # - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
